# sentiments-classifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: documentation.yml  pypackage.yml  sentiment.yml  serve.yml  workload.yml
alert_configs/: alertmanager.yml  rules_cpu_load.yml  rules_instance_down.yml  rules_ood.yml  rules_oom.yml
deploy/jobs/: workload.sh
deploy/services/: server.py
docs/: index.md
docs/sentiments/: config.md  evaluation.md  model.md  predict.md  pro_data.md  server.md  train.md  tuner.md  utils.md
kf-pipeline/: data_ingestion.py
notebooks/: sentiments.ipynb
src/sentiments/: __init__.py  config.py  evaluation.py  model.py  monitor_prom_middleware.py  predict.py  pro_data.py  server.py  train.py  tuner.py  utils.py
tests/code/: conftest.py  test_data.py  test_predict.py  test_train.py  test_utils.py  utilities.py
tests/data/: conftest.py  test_dataset.py
tests/model/: conftest.py  test_model.py
