[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiments"
version = "0.0.1"
authors = [
    { name = "Nnaemeka Nwankwo", email = "nuaemeka@gmail.com" },
]
description = "Classifies a sentence if it is neutral, positive or negative"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.1.4",
    "datasets==3.3.2",
    "jupyterlab==4.3.5",
    "tensorflow==2.19.0",
    "mlflow==2.20.3",
    "wordcloud==1.9.4",
    "scikit-learn==1.6.1",
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "hyperopt==0.2.7",
    "pre-commit",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "great_expectations==1.3.10",
    "mkdocs==1.6.1",
    "mkdocstrings==0.29.0",
    "mkdocstrings[python]",
    "black==25.1.0",
    "flake8==7.1.2",
    "Flake8-pyproject==1.2.3",
    "isort==6.0.1",
    "pyupgrade==3.19.1",
    "kfp==2.12.1",
    "docker==7.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/codebasetwo/sentiments-classifier"
Issues = "https://github.com/codebasetwo/sentiments-classifier/issues"

# Black formatting
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    | .git          # exclude a few common directories in the
    | build         # root of the project
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "sentiment"

# flake8
[tool.flake8]
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.pyupgrade]
py39plus = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "training: marks tests as related to training scenarios compute intensive.",
    "tune: marks test as related to tuning models. compute intensive"
]

# Pytest cov
[tool.coverage.run]
omit=["src/sentiments/evaluation.py", "src/sentiments/server.py", "src/sentiments/tuner.py"]
